# Ticket-Management

./: README.md  pyproject.toml
helptrack/: hooks.py  modules.txt
helptrack/fixtures/: custom_field.json  property_setter.json  role.json
helptrack/helptrack/custom/: employee.json  hd_ticket.json
